fixed menu alignment

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,14 +4,15 @@
 /* } */
 
 .album-art-boxlayout {
-  margin-top: 10px;
-  height: 130px;
-  width: 130px;
+  padding-top: 20px;
+  padding-left: 12px;
+  padding-right: 12px;
+  padding-bottom: 20px;
+  height: 180px;
+  width: 180px;
 }
 
 .media-control-box {
-  height: 200px;
-  width: 200px;
   background-color: rgba(0, 0, 0, 0.5);
   border-radius: 16px;
 }
